apps/invidious/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invidious-postgres
  namespace: invidious
spec:
  replicas: 1
  selector:
    matchLabels:
      app: invidious-postgres
  template:
    metadata:
      labels:
        app: invidious-postgres
    spec:
      nodeSelector:
        kubernetes.io/hostname: borgling-1
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
      containers:
        - name: postgres
          image: docker.io/library/postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              memory: 256Mi
              cpu: 100m
            limits:
              memory: 512Mi
              cpu: 500m
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: invidious-postgres-pvc
