apps/invidious/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: invidious
  namespace: invidious
spec:
  selector:
    app: invidious
  ports:
    - port: 3000
      targetPort: 3000
