apps/invidious/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: invidious
  namespace: invidious
  annotations:
    th3borg.org/apps-healthcheck: "/api/v1/stats"
    th3borg.org/apps-category: "media"
    th3borg.org/apps-tier: "optional"
    kubernetes.io/ingress.class: nginx
    th3borg.org/apps-portal: "true"
    th3borg.org/apps-name: "Invidious"
    th3borg.org/apps-description: "Privacy-respecting YouTube frontend"
    th3borg.org/apps-icon: "play"
spec:
  rules:
    - host: tube.th3borg.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: invidious
                port:
                  number: 3000
